# axum-error-object

./: .editorconfig  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
examples/: playground.rs
macros/: Cargo.toml
macros/src/: attrs.rs  expand.rs  lib.rs
src/: context.rs  display.rs  error.rs  lib.rs  response.rs  status.rs
