[workspace]
members = [".", "macros"]

[package]
name = "axum-error-object"
readme = "README.md"
description = "Provides a `Result<T>` type and related utility types that can be used to holistically provide object response errors."
documentation = "https://docs.rs/axum-error-object"
version = "0.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mehcode/axum-error-object"
keywords = ["axum", "anyhow", "error"]
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-error-object-macros = { path = "./macros", version = "0.0.4" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
tokio = { version = "1.44.2", features = ["full"] }
